# ilovepdf

./: .gitignore  Dockerfile  Procfile  README.md  app.json  configs.py  database.py  docker-compose.yml  dockerImage.txt  heroku.yml  index.md  logger.py  pdf.py  pyproject.toml  requirements.txt  setup.py  start.sh
Configs/: dm.py
ILovePDF/: .env  __init__.py  __main__.py  config.env  database.py  logger.py  pdf.py  requirements.txt  run.sh  setup.py  update.py
ILovePDF/configs/: __init__.py  beta.py  config.py  db.py  log.py
ILovePDF/images/: __init__.py
ILovePDF/lang/: __init__.py  __users__.py  arb.py  eng.py  frn.py  hnd.py  ita.py  spn.py  uzb.py
ILovePDF/libgenesis/: download.py  requirements.txt  search.py  utils.py
ILovePDF/plugins/: __init__.py
ILovePDF/web/: __init__.py  domain.py  index.html  quotes.py
configs/: beta.py  config.py  db.py  dm.py  features.py  group.py  images.py  log.py
images/: beta.py
lang/: __demo__.py  __init__.py  __users__.py  arb.py  chi.py  eng.py  frn.py  hnd.py  mal.py  rus.py  spn.py  uzb.py
libgenesis/: __init__.py  download.py  search.py  utils.py
plugins/: __init__.py  checkPdf.py  fileSize.py  fncta.py  footer.py  generate.py  progress.py  render.py  thumbName.py  toKnown.py  util.py  work.py
plugins/dm/: _check_.py  _init_.py  admin.py  ban.py  banned.py  cancel.py  commands.py  delete.py  document.py  feedback.py  generate.py  id.py  messageId.py  photo.py  settings.py  start.py  thumbnail.py  txt2pdf.py  url.py  waste.py
plugins/group/: doc.py  document.py  start.py
plugins/utils/: __init__.py  (+5 more)
(+166 files in other folders)
